few improvememnts to post

--- a/_posts/2020-04-10-Vue.js-Getting started with vuejs.md
+++ b/_posts/2020-04-10-Vue.js-Getting started with vuejs.md
@@ -7,7 +7,7 @@ category: ['webdevelopment' , 'javascript']
 author: iamharsh
 ---
 
-**Hey folks! Welcome to my artcile on getting started with vue.js and today we will be learning WTF is Vue.js. So,without any further do let's get started.**
+**Hey folks! Welcome to my artcile on getting started with vue.js and today we will be learning WTF is Vue.js. So,without any further do let's get started.** Vue.js is not any other hyped javascript framework like React and angular are as they are backed by two tech giants but this framework is from a team of legends. Vue.js is a must learn stuff, its so easy to understand and the functionality it provides are so Awesome that you gonna fall in love with it.
 
 # What is Vue.js  ?
 <br>
@@ -20,6 +20,8 @@ Vue (pronounced /vjuː/, like view) is a progressive framework for building user
 
 <br>
 <img src="https://media.giphy.com/media/zOvBKUUEERdNm/200.gif" style="width:100%;">
+<br>
+Hey that was just the defination of vue.js here is lot more to explore.
 <br>
 <h1>Vue.js Directives<h1>
 <ol>
@@ -93,6 +95,7 @@ var myObject = new Vue({
 {% endhighlight %}
 
 <h1>Vue.js Conditional binding</h1>
+<h1>v-if binding</h1>
 <br>
 <p>It’s easy to toggle the presence of an element, too:</p>
 
@@ -107,6 +110,49 @@ var app3 = new Vue({
     seen: true
   }
 })
+{% endhighlight %}
+<br>
+<h1>v-else binding </h1>
+<p>
+You can aslo add v-else binding. It displays another element with v-else shit if the v-if conditional gets false. Just follow the example below.
+</p>
+<br>
+{% highlight javascript %}
+<div id="appxx">
+  <h1 v-if="awesome">Vue is awesome!</h1>
+  <h1 v-else>Oh no 😢</h1>
+</div>
+
+var appxx=new Vue({
+  el:'#appxx',
+  data:{
+    seen:false
+  }
+  })  
+
+  // Output will ne Oh no 😢.
+
+{% endhighlight %}
+<br>
+<h1>v-else-if binding</h1>
+<p>The v-else-if, as the name suggests, serves as an “else if block” for v-if. It can also be chained multiple times:</p>
+<br>
+{% highlight javascript %}
+<div v-if="type === 'A'">
+  A
+</div>
+<div v-else-if="type === 'B'">
+  B
+</div>
+<div v-else-if="type === 'C'">
+  C
+</div>
+<div v-else>
+  Not A/B/C
+</div>
+
+//Similar to v-else, a v-else-if element must immediately follow a v-if or a v-else-if element.
+
 {% endhighlight %}
 <br>
 <h1>Vue.js Loop Binding</h1>
@@ -136,7 +182,7 @@ myObject = new Vue({
 </script>
 {% endhighlight %}
 <br>
-
+<img src="https://camo.githubusercontent.com/4f5f2a67d153e06cf1420c22aaf228f518b35901/68747470733a2f2f7468756d62732e6766796361742e636f6d2f50696e6b5069657263696e6742756c6c2d73697a655f726573747269637465642e676966" style="width:100%;">
 <h1>Installation</h1>
 <br>
 <p>The easiest way to try out Vue.js is using the <a href="https://codesandbox.io/s/github/vuejs/vuejs.org/tree/master/src/v2/examples/vue-20-hello-world">Hello World example</a>. Feel free to open it in another tab and follow along as we go through some basic examples. Or, you can <a href="https://github.com/vuejs/vuejs.org/blob/master/src/v2/examples/vue-20-hello-world/index.html">create an index.html file</a> and include Vue with:</p>
@@ -153,5 +199,4 @@ or:
 <br>
 The <a href="https://vuejs.org/v2/guide/installation.html">Installation</a> page provides more options of installing Vue. Note: We do not recommend that beginners start with vue-cli, especially if you are not yet familiar with Node.js-based build tools.
 <br>
-<img src="https://camo.githubusercontent.com/4f5f2a67d153e06cf1420c22aaf228f518b35901/68747470733a2f2f7468756d62732e6766796361742e636f6d2f50696e6b5069657263696e6742756c6c2d73697a655f726573747269637465642e676966" style="width:100%;">
 <p>I hope this clears your basics about vue.js. You can refer to vue.js <a href="">official documentation</a> for more. Vue.js has lot more to explore.</p>
